Prueba de cargar 1

--- a/index.html
+++ b/index.html
@@ -1,2 +1,27 @@
-<h1> Este es un html de prueba</h1>
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<link rel="stylesheet" href="">
+</head>
+<body>
+	<section>
+		<h1>David Sandoval</h1>
+		<p>Desarrollador Web Full Stack</p>
+		<ul>
+			<li>PHP</li>
+			<li>SASS - CSS</li>
+			<li>HTML</li>
+			<li>JavaScript</li>
+			<li>JQuery</li>
+			<li>JSON</li>
+			<li>AJAX</li>
+			<li>Laravel</li>
+			<li>Symfony</li>
+			<li>AngularJs</li>
+		</ul>
+	</section>
+</body>
+</html>
